// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`topbar-sticker For display only renders as expected 1`] = `
<div
  className="h300"
>
  <div
    className="px24 py12"
  >
    Above the bar.
  </div>
  <div
    className="sticky-outer-wrapper"
    style={Object {}}
  >
    <div
      className="sticky-inner-wrapper"
      style={
        Object {
          "position": "relative",
          "top": "0px",
          "zIndex": 4,
        }
      }
    >
      <div
        className="border-t border-b border--gray-light bg-white"
        data-swiftype-index="false"
      >
        <div
          className="limiter"
        >
          <div
            className="grid"
          >
            <div
              className="col col--4-mm col--12"
            >
              <div
                className="ml24-mm pt12"
                style={
                  Object {
                    "height": 52,
                  }
                }
              >
                <div
                  className="dr-ui--product-menu"
                >
                  <a
                    className="txt-fancy txt-l block color-blue-on-hover"
                    href="/dr-ui/"
                  >
                    Dr. UI
                  </a>
                </div>
              </div>
            </div>
            <div
              className="col col--8-mm col--12"
            >
              <div
                className="flex-parent-mm flex-parent--center-cross flex-parent--end-main h-full-mm wmax300 wmax-full-mm mb0-mm mb12"
              >
                <div
                  className="h36 relative"
                >
                  <button
                    className="flex-parent flex-parent--center-cross btn--gray color-gray-light btn btn--stroke py3 pl6 pr12 round w-full"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    <span
                      className="mr6 color-gray"
                    >
                      <svg
                        className="icon w18 h18"
                      >
                        <use
                          xlinkHref="#icon-search"
                        />
                      </svg>
                    </span>
                     
                    <span
                      className="color-gray"
                    >
                      Search
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="px24 py12"
  >
    Below the bar, with lots of space to scroll.
  </div>
</div>
`;

exports[`topbar-sticker Unsticks at 900px renders as expected 1`] = `
<div
  style={
    Object {
      "background": "blue",
      "height": 3000,
    }
  }
>
  <div
    className="px24 py12"
  >
    Above the bar.
  </div>
  <div
    className="sticky-outer-wrapper"
    style={Object {}}
  >
    <div
      className="sticky-inner-wrapper"
      style={
        Object {
          "position": "relative",
          "top": "0px",
          "zIndex": 4,
        }
      }
    >
      <div
        className="border-t border-b border--gray-light bg-white"
        data-swiftype-index="false"
      >
        <div
          className="limiter"
        >
          <div
            className="px24 py12"
          >
            I'm going to unstick at 900px wide or less!
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="px24 py12"
  >
    Below the bar, with lots of space to scroll.
  </div>
</div>
`;
